# Vender

./: .gitignore  BuildCommands.sh  CMakeLists.txt  README.md  camera.h  main.cpp  material.h  prebuild.bat  shader.h
docs/html/: annotated.html  camera_8h.html  camera_8h__dep__incl.map  camera_8h__dep__incl.md5  camera_8h__incl.map  camera_8h__incl.md5  camera_8h_source.html  class_camera-members.html  class_camera.html  class_camera__coll__graph.map  class_camera__coll__graph.md5  class_camera_a60d9ad07c17450e2a9f0031a6d65b3e4_icgraph.map  class_camera_a60d9ad07c17450e2a9f0031a6d65b3e4_icgraph.md5  class_camera_a738b75028133e73a3244525afed956f9_icgraph.map  class_camera_a738b75028133e73a3244525afed956f9_icgraph.md5  class_camera_abffb6b59638a02af34be5f14395edcde_icgraph.map  class_camera_abffb6b59638a02af34be5f14395edcde_icgraph.md5  class_camera_ae9acd19164c0c15d773dbc0c26b6221b_icgraph.map  class_camera_ae9acd19164c0c15d773dbc0c26b6221b_icgraph.md5  class_cube_default-members.html  class_cube_default.html  class_cube_default__coll__graph.map  class_cube_default__coll__graph.md5  class_cube_default__inherit__graph.map  class_cube_default__inherit__graph.md5  class_cube_default_ad9b3ee5e678e06c9e290ffca67e1c06e_icgraph.map  class_cube_default_ad9b3ee5e678e06c9e290ffca67e1c06e_icgraph.md5  class_cube_tex-members.html  class_cube_tex.html  class_cube_tex__coll__graph.map  class_cube_tex__coll__graph.md5  class_cube_tex__inherit__graph.map  class_cube_tex__inherit__graph.md5  class_cube_tex_a5d4468501bc71fc9fb7967d603226b8f_icgraph.map  class_cube_tex_a5d4468501bc71fc9fb7967d603226b8f_icgraph.md5  class_i_cube-members.html  class_i_cube.html  class_i_cube__coll__graph.map  class_i_cube__coll__graph.md5  class_i_cube__inherit__graph.map  (+118 more)
docs/latex/: annotated.tex  camera_8h.tex  camera_8h__dep__incl.md5  camera_8h__incl.md5  camera_8h_source.tex  class_camera.tex  class_camera__coll__graph.md5  class_camera_a60d9ad07c17450e2a9f0031a6d65b3e4_icgraph.md5  class_camera_a738b75028133e73a3244525afed956f9_icgraph.md5  class_camera_abffb6b59638a02af34be5f14395edcde_icgraph.md5  class_camera_ae9acd19164c0c15d773dbc0c26b6221b_icgraph.md5  class_cube_default.tex  class_cube_default__coll__graph.md5  class_cube_default__inherit__graph.md5  class_cube_default_ad9b3ee5e678e06c9e290ffca67e1c06e_icgraph.md5  class_cube_tex.tex  class_cube_tex__coll__graph.md5  class_cube_tex__inherit__graph.md5  class_cube_tex_a5d4468501bc71fc9fb7967d603226b8f_icgraph.md5  class_i_cube.tex  class_i_cube__inherit__graph.md5  class_shader.tex  class_shader__coll__graph.md5  class_shader_a3c7896754f0e1fca8bde860cfef63832_icgraph.md5  class_shader_a3e135bbf914b087a939114d79c10d283_cgraph.md5  class_shader_a794160d5fb1e1c842b90cee50feb6537_icgraph.md5  class_shader_a8e711c96f3e1722cbfb88fde9478977c_icgraph.md5  class_shader_ad362e2b654cd95a3574cd505411e41fd_icgraph.md5  class_shader_aeb021061c5d451329d92257b07dbfec3_icgraph.md5  class_shader_afe7367621f74c2d26431d8ac15252bf3_icgraph.md5  cube__model_8h.tex  cube__model_8h__dep__incl.md5  cube__model_8h__incl.md5  cube__model_8h_source.tex  dir_1ae4179d5e953611aae20c997279e02c.tex  files.tex  hierarchy.tex  main_8cpp.tex  main_8cpp__incl.md5  main_8cpp_a06ad2502008f16fbcf01dfaa7f7bc9ea_cgraph.md5  (+37 more)
docs/puml/: DesktopC1.puml  DesktopC3.puml  renderer.puml
glad/src/: glad.c
models/: cube_model.h  pyramid_model.h
models/lights/: light.h
models/objects/: cube.h  pyramid.h
shaders/: cubeShader.fs  cube_generic.fs  cube_generic.vs  cube_textured.fs  lightShader.fs  shader.fs  shader.vs
vender/: appdata.cpp  appdata.h  main.cpp  material.h  shader.cpp
vender/assets/: material.h  texture.cpp  texture.h
(+81 files in other folders)
